--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
 /* Write your CSS here! */
+html, body {
+    background-color: grey;
+    font-size: 10px;       /* base font size is now 10 pixels high */
+    font-family: "Open Sans", sans-serif; 
+}
+
+header {
+    color: red;
+}
+
+body {
+    width: 600px;
+    margin: 0 auto;
+    background-color: rgba(255, 247, 0, 0.86);
+    padding: 0 20px 20px 20px;
+    border: 5px solid black;
+ }
+
+h1 {
+    margin: 0;
+    padding: 20px 0;
+    color: #5a009fe1;
+    text-shadow: 3px 3px 1px black;
+}
+
+h1 {
+    font-size: 60px;
+    text-align: center;
+}
+
+p, li {
+    font-size: 16px;
+    line-height: 2;
+    letter-spacing: 1px;
+}
+
+img {              /*images are inline elements*/
+    display: block;   /*apply block behavior*/
+    margin: 0 auto;
+}
