--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,21 @@ html, body {
     font-family: "Open Sans", sans-serif; 
 }
 
-header {
+header, #main-heading {
     color: red;
 }
 
 body {
     width: 600px;
-    margin: 0 auto;
+    margin: 8px auto;
+    display: block;
     background-color: rgba(255, 247, 0, 0.86);
     padding: 0 20px 20px 20px;
     border: 5px solid black;
- }
+}
 
 h1 {
-    margin: 0;
+    margin: 0 auto;
     padding: 20px 0;
     color: #5a009fe1;
     text-shadow: 3px 3px 1px black;
@@ -29,13 +30,22 @@ h1 {
     text-align: center;
 }
 
-p, li {
+p, #test-p {
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
+}
+
+p.fun-paragraph {
+    color: green;
 }
 
 img {              /*images are inline elements*/
     display: block;   /*apply block behavior*/
     margin: 0 auto;
 }
+
+div {
+    display: flex;
+}
+
