--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,24 @@
 /* Write your CSS here! */
-html, body {
+body {
     background-color: rgb(232, 185, 185);
     font-size: 15px;       /* base font size is now 15 pixels high */
     font-family: "Open Sans", sans-serif; 
     text-align: center;
+    margin: 8px;
+    display: block;
 }
 
-header, #main-heading {
+#mainHeading {
     color: red;
     text-shadow: 3px 3px 1px black;
     font-size: 25px;
     font-family: "Open Sans", sans-serif; 
     text-align: center;
+}
+
+img {
+    height: 35%;
+    width: 35%;
 }
 
 /* body {
@@ -35,27 +42,33 @@ h3 {
     font-family: "Open Sans", sans-serif; 
 }
 
-p, #test-p {
-    color: rgb(55, 0, 0);
+/* #test-p {
+    color: rgb(1, 99, 1);
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
     font-family: "Open Sans", sans-serif; 
-}
+} */
 
-h2.fun-paragraph {
+.funParagraph {
     color: rgb(1, 99, 1);
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 2;
+    letter-spacing: 1px;
+    font-family: "Open Sans", sans-serif;
     text-align: center;
-    font-family: "Open Sans", sans-serif; 
 }
 
-#p1, #p2, #p3, #p4 {
+p {
     color:rgb(34, 94, 34);
     text-align: center;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 1px;
     font-family: "Open Sans", sans-serif; 
+    border:2px solid black;
+    padding: 5px;
 }
 
 img {              /*images are inline elements*/
@@ -67,11 +80,16 @@ div {
     display: block; 
 }
 
-.footer {   /* not working */
+/* footer {   
     display: block; 
     font-size: 10px;
     line-height: 1;
     letter-spacing: 1px;
     text-align: auto;
     color: black;
+} */
+
+#zoobilee-zoo {
+    border:2px solid black;
+    border-style: solid;
 }
